Some change in landing page

--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
                 <path d="M301.849 48C301.442 48 301.096 47.8576 300.812 47.573C300.527 47.2883 300.385 46.9426 300.385 46.536C300.385 46.2106 300.466 45.9463 300.629 45.743L310.511 31.652L301.727 18.537C301.564 18.293 301.483 18.0286 301.483 17.744C301.483 17.3373 301.625 16.9916 301.91 16.707C302.194 16.4223 302.54 16.28 302.947 16.28H314.11C314.638 16.28 315.045 16.402 315.33 16.646C315.614 16.8493 315.858 17.1136 316.062 17.439L319.6 22.868L323.138 17.439C323.341 17.1136 323.585 16.8493 323.87 16.646C324.154 16.402 324.561 16.28 325.09 16.28H335.765C336.171 16.28 336.517 16.4223 336.802 16.707C337.086 16.9916 337.229 17.317 337.229 17.683C337.229 18.0083 337.147 18.293 336.985 18.537L328.018 31.591L338.083 45.743C338.245 45.9463 338.327 46.2106 338.327 46.536C338.327 46.9426 338.184 47.2883 337.9 47.573C337.615 47.8576 337.269 48 336.863 48H325.151C324.663 48 324.297 47.9186 324.053 47.756C323.809 47.5526 323.565 47.2883 323.321 46.963L319.295 41.046L315.086 46.963C314.638 47.6543 314.028 48 313.256 48H301.849Z" fill="#00B57E"/>
             </svg>  
             <h2 class="landing_title landing_title__save"><span class="landing_title__big"><span class="landing_title__red">Сохраняйте</span> ссылки,</span> чтобы не потерять их</h2>
-            <svg class="landing_line landing_line__first" width="105" height="37" viewBox="0 0 105 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 1C9.45894 14.4742 32.9449 38.0704 59.2174 24.662C85.4899 11.2535 100.019 26.6338 104 36" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>                
+            <svg class="landing_line landing_line__first" width="105" height="22" viewBox="0 0 105 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1C9.45894 8.69953 32.9449 22.1831 59.2174 14.5211C85.4899 6.85915 100.019 15.6479 104 21" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>                    
             <h2 class="landing_title landing_title__group"><span class="landing_title__big"><span class="landing_title__red">Группируйте,</span></span> чтобы упорядочить</h2>
-            <svg class="landing_line landing_line__second" width="231" height="53" viewBox="0 0 231 53" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M230 1C225.486 24.5 145.293 45.4935 97 25.5C11.2524 -9.99999 -9.50009 30.5 5.00009 52.5" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>                  
+            <svg class="landing_line landing_line__second" width="252" height="57" viewBox="0 0 252 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M250.831 1C246.302 24.2883 165.74 45.3323 117.387 25.2793C26.5856 -12.3784 -6.02299 -1.97297 2.00383 56" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>                      
             <h2 class="landing_title landing_title__signup"><span class="landing_title__big"><span class="landing_title__red">Зарегистрируйтесь,</span></span> если впервые</h2>
-            <svg class="landing_line landing_line__third" width="107" height="46" viewBox="0 0 107 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.5 1C35.5 39 97 -3 106 45.5" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
+            <svg class="landing_line landing_line__third" width="147" height="32" viewBox="0 0 147 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.5 1C5 29 129.5 -5.70052 146 31" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>    
             <button class="landing_button landing_button__signup">Зарегистрироваться</button>
-            <svg class="landing_line landing_line__fourth" width="7" height="55" viewBox="0 0 7 55" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5.60358 1C8.52896 36.1682 -6.08647 21 5.6037 54" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>                
-            </svg>
+            <svg class="landing_line landing_line__fourth" width="9" height="50" viewBox="0 0 9 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6.98721 1C10 17.5 -1.00042 32 1.03161 49" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>    
             <h2 class="landing_title landing_title__login">
                 <span class="landing_title__big">
                     <span class="landing_title__green">Войдите,</span>
                 </span>
                 если есть аккаунт в userfulinx
             </h2>
-            <svg class="landing_line landing_line__fifth" width="31" height="53" viewBox="0 0 31 53" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M29.6035 1C32.5289 36.1682 -8.69017 19 3 52" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>                
+            <svg class="landing_line landing_line__fifth" width="7" height="47" viewBox="0 0 7 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.57601 1C7.19384 29 3.86001 19.871 1 46" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>                    
             <button class="landing_button landing_button__login">Войти</button>
         </section>
     </section>
