Delete fifth line

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 </span>
                 если есть аккаунт в userfulinx
             </h2>
-            <svg class="landing_line landing_line__fifth" width="7" height="47" viewBox="0 0 7 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <!-- <svg class="landing_line landing_line__fifth" width="7" height="47" viewBox="0 0 7 47" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M5.57601 1C7.19384 29 3.86001 19.871 1 46" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>                    
+            </svg>                     -->
             <button class="landing_button landing_button__login">Войти</button>
         </section>
     </section>
