Change typo userfulinx to usefulinx

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section id="app" v-cloak>
         <section class="landing" v-if="page === 'landing'">
             <h1 class="landing_logo">
-                <span class="landing_logo__userfu">
-                    <span class="landing_logo__inner">userfu</span>
+                <span class="landing_logo__usefu">
+                    <span class="landing_logo__inner">usefu</span>
                 </span>
                 <span class="landing_logo__slashes">//</span>
                 <span class="landing_logo__inx">
@@ -50,7 +50,7 @@
                 <span class="landing_title__big">
                     <span class="landing_title__green">Войдите,</span>
                 </span>
-                если есть аккаунт в userfulinx
+                если есть аккаунт в usefulinx
             </h2>
             <!-- <svg class="landing_line landing_line__fifth" width="7" height="47" viewBox="0 0 7 47" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M5.57601 1C7.19384 29 3.86001 19.871 1 46" stroke="#12297B" stroke-linecap="round" stroke-linejoin="round"/>
